--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "build:packages": "pnpm --filter \"./packages/**\" build",
+    "lint:packages": "pnpm --filter \"./packages/**\" lint",
+    "format:packages": "pnpm --filter \"./packages/**\" format"
+  },
   "keywords": [],
   "author": "Boram Uyar",
   "license": "MIT",
