pass with no tests

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -92,7 +92,7 @@ jobs:
       - name: Publish to npm
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: pnpm -r publish --access public --no-git-checks
+        run: pnpm --filter="[origin/main]" publish --access public --no-git-checks
 
       - name: Create GitHub Release
         if: startsWith(github.ref, 'refs/tags/')
