--- a/packages/relay-react/package.json
+++ b/packages/relay-react/package.json
@@ -24,9 +24,9 @@
     "react"
   ],
   "peerDependencies": {
+    "@powertoys/relay": "workspace:*",
     "react": ">=16.8.0",
-    "react-dom": ">=16.8.0",
-    "@powertoys/relay": "workspace:*"
+    "react-dom": ">=16.8.0"
   },
   "dependencies": {
     "@powertoys/relay": "workspace:*"
@@ -37,13 +37,14 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.2",
     "@types/node": "^22.13.10",
+    "@types/react": "^19.0.10",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
     "@typescript-eslint/parser": "^8.26.1",
     "eslint": "^9.22.0",
-    "@types/react": "^19.0.10",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "globals": "^15.15.0",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
     "rollup": "^4.35.0",
