--- a/packages/relay/package.json
+++ b/packages/relay/package.json
@@ -37,6 +37,7 @@
     "webpack": ">=5.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.21.0",
     "@rollup/plugin-commonjs": "^28.0.3",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-terser": "^0.4.4",
@@ -49,6 +50,7 @@
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "globals": "^15.15.0",
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
