--- a/packages/relay/package.json
+++ b/packages/relay/package.json
@@ -26,6 +26,9 @@
     "typescript",
     "react"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "peerDependencies": {
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
