--- a/packages/relay-react/package.json
+++ b/packages/relay-react/package.json
@@ -13,8 +13,7 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "lint": "eslint src --ext .ts,.tsx",
-    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
-    "prepare": "npm run build"
+    "format": "prettier --write \"src/**/*.{ts,tsx}\""
   },
   "keywords": [
     "cross-tab",
