--- a/packages/relay/package.json
+++ b/packages/relay/package.json
@@ -53,6 +53,7 @@
     "rollup": "^4.35.0",
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-string": "^3.0.0",
     "tslib": "^2.8.1",
     "typedoc": "^0.27.9",
     "typescript": "^5.8.2"
